--- a/BackgroundEasy/MainWindow.xaml
+++ b/BackgroundEasy/MainWindow.xaml
@@ -610,26 +610,80 @@
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
 
-                                        <Border Width="80" Height="80" Margin="8" Background="{StaticResource MiTransparencyTiles}" VerticalAlignment="Top">
+                                        <Border AttachedMi:DropFilesAtachedProperties.DropFilesKey="bg" AttachedComMi:DropNativeUXHelper.Channel="bg" AttachedComMi:DropNativeUXHelper.DestinationLabel="Background Images" AttachedComMi:DropNativeUXHelper.AllowedFileExtenstionsCommaSeparated=".png,.jpg,.jpeg"  AttachedComMi:DropNativeUXHelper.AcceptFileDrop="True" Width="80" Height="80" Margin="8" Background="{StaticResource MiTransparencyTiles}" VerticalAlignment="Top">
 
-                                            <materialDesign:Badged HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
-                                                <materialDesign:Badged.Badge>
-                                                    5
-                                                </materialDesign:Badged.Badge>
+                                            <Grid  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
                                                 <Grid>
                                                     <Image Source="{Binding CurrentBgImgImageSource, Mode=OneWay}"/>
-                                                    <Button VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource MaterialDesignIconButton}"  Background="#66C3C3C3" Command="{Binding SelectBgImageCommand}">
-                                                        <custom:PackIconMaterial Kind="ImageEdit" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF1A75B5"/>
+                                                    <Border>
+                                                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+                                                            <Button VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource MaterialDesignIconButton}"  Background="#66C3C3C3" Command="{Binding SelectBgImageCommand}" Width="32" Height="32">
+                                                                <custom:PackIconMaterial Kind="ImageEdit" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF1A75B5"/>
+                                                            </Button>
 
-                                                    </Button>
+                                                        </StackPanel>
+                                                    </Border>
+
                                                 </Grid>
+                                                <Border Visibility="{Binding IsNavigatorVisible, Converter={StaticResource BooleanToVisibilityConverter}}" VerticalAlignment="Bottom" Background="#1C1C1C" CornerRadius="7" HorizontalAlignment="Center" Width="69" Opacity="0.8" Margin="0,0,0,4">
+                                                    <Grid >
+                                                        <Button Foreground="#FFE6E6E6" Margin="4,0,0,0"  Grid.Column="1" Height="24" Width="14" Style="{StaticResource SquaryIconButton}"  Background="{DynamicResource MaterialDesignTextFieldBoxBackground}" Command="{Binding NavigatePreviousBgImageCommand}" HorizontalAlignment="Left">
+                                                            <custom:PackIconMaterial VerticalAlignment="Center" Kind="ChevronLeft" Height="12" Width="12"/>
+                                                        </Button>
+                                                        <TextBlock Style="{StaticResource MaterialDesignCaptionTextBlock}" Margin="4 0" VerticalAlignment="Center" Foreground="#FFE6E6E6" HorizontalAlignment="Center" ><Run Text="{Binding CurrentBgIxUI, Mode=OneWay}"/><Run Text="/"/><Run Text=" "/><Run Text="{Binding CurrentBackgroundImagesPaths.Length, Mode=OneWay}"/></TextBlock>
+                                                        <Button  Foreground="#FFE6E6E6" Margin="0,0,4,0"  Grid.Column="1" Height="24" Width="14" Style="{StaticResource SquaryIconButton}"  Background="{DynamicResource MaterialDesignTextFieldBoxBackground}" Command="{Binding NavigateNextBgImageCommand}" HorizontalAlignment="Right">
+                                                            <custom:PackIconMaterial VerticalAlignment="Center" Kind="ChevronRight" Height="12" Width="12"/>
+                                                        </Button>
+                                                    </Grid>
 
-                                            </materialDesign:Badged>
-                                           
-                                           
+                                                </Border>
+                                                <Grid x:Name="bg_drop_state_overlay" Background="{StaticResource MaterialDesignPaper}"  Visibility="{Binding IsBgInDropFileState, Converter={StaticResource BooleanToVisibilityConverter}}" Grid.RowSpan="2" >
+
+                                                    <Grid Background="White">
+                                                        <Grid.RowDefinitions>
+                                                            <RowDefinition Height="160*"/>
+                                                            <RowDefinition Height="3*"/>
+                                                        </Grid.RowDefinitions>
+                                                        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                                                            <TextBlock Style="{StaticResource MaterialDesignSubtitle2TextBlock}" Text="Drop here"  TextWrapping="Wrap" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#DD6A6A6A" Margin="0"/>
+
+                                                        </StackPanel>
+
+
+                                                    </Grid>
+
+                                                    <Rectangle Margin="4" StrokeDashArray="4 4" Stroke="#FFB6B6B6" RadiusX="9" RadiusY="9" StrokeThickness="2" >
+                                                        <Rectangle.Resources>
+                                                            <materialDesign:BrushOpacityConverter x:Key="boc"/>
+                                                        </Rectangle.Resources>
+                                                        <Rectangle.Fill>
+
+                                                            <Binding  Converter="{StaticResource boc}" ConverterParameter="0" Source="{StaticResource PrimaryHueMidBrush}"/>
+                                                        </Rectangle.Fill>
+                                                    </Rectangle>
+
+                                                </Grid>
+                                            </Grid>
+
+
 
                                         </Border>
 
+                                        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,96,0,0" Grid.Column="0" Orientation="Horizontal">
+                                            <Button Margin="0 0 4 0"  Height="24" Width="24" Style="{StaticResource MaterialDesignIconButton}" ToolTip="Clear List" Command="{Binding ClearBgImagesCommand}" Foreground="#FFDF281E" Background="#19DF281E">
+                                                <!--materialDesign:PackIcon Width="16" Height="16" Kind="ImageAdd" /-->
+                                                <Image Height="16" Width="16" VerticalAlignment="Center" HorizontalAlignment="Center" Source="/BackgroundEasy;component/Media/close_16px_FFDF281E.png"/>
+                                            </Button>
+                                            <Button   Height="24" Width="24" Style="{StaticResource MaterialDesignIconButton}" ToolTip="Add image..." Background="{DynamicResource MaterialDesignTextFieldBoxBackground}" Command="{Binding AddBgImageCommand}">
+                                                <!--materialDesign:PackIcon Width="16" Height="16" Kind="ImageAdd" /-->
+                                                <Image Height="16" Width="16" VerticalAlignment="Center" HorizontalAlignment="Center" Source="/BackgroundEasy;component/Media/add_image_16px_FF1A75B5.png"/>
+                                            </Button>
+                                            <Button  Margin="4,0,0,0"  Grid.Column="1" Height="24" Width="24" Style="{StaticResource MaterialDesignIconButton}" ToolTip="Add images from a folder" Background="{DynamicResource MaterialDesignTextFieldBoxBackground}" Command="{Binding AddBgImagesFromFolderCommand}">
+                                                <!--materialDesign:PackIcon Kind="FolderAdd" Width="16" Height="16"  /-->
+                                                <Image Height="16" Width="16" VerticalAlignment="Center" HorizontalAlignment="Center" Source="/BackgroundEasy;component/Media/add_folder_16px_1A75B5.png"/>
+
+                                            </Button>
+                                        </StackPanel>
                                         <StackPanel Grid.Column="1" Margin="8">
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
@@ -638,8 +692,8 @@
                                                     <ColumnDefinition Width="auto" />
                                                 </Grid.ColumnDefinitions>
                                                 <TextBlock VerticalAlignment="Center" Margin="4 0" Text="Source"/>
-                                                <TextBox Grid.Column="1" VerticalAlignment="Center"  materialDesign:TextFieldAssist.HasClearButton="True" materialDesign:HintAssist.IsFloating="False"  materialDesign:TextFieldAssist.TextFieldCornerRadius="0" Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="8,0" Padding="4,4" Text="{Binding CuurentBackgroundImagePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                                               
+                                                <TextBox Grid.Column="1" VerticalAlignment="Center"  IsReadOnly="True" materialDesign:HintAssist.IsFloating="False"  materialDesign:TextFieldAssist.TextFieldCornerRadius="0" Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="8,0" Padding="4,4" Text="{Binding CuurentBackgroundImagePathUI, Mode=OneWay}" />
+
 
                                             </Grid>
 
@@ -666,7 +720,7 @@
                                                 </Grid.ColumnDefinitions>
                                                 <TextBlock VerticalAlignment="Center" Margin="4 0" Text="Hex:"/>
                                                 <TextBox HorizontalAlignment="Left" Width="80" AttachedComMi:TextBoxAttachedProperties.EnterCommand="{Binding PushHexCommand}" Grid.Column="1" VerticalAlignment="Center"   materialDesign:HintAssist.IsFloating="False"  materialDesign:TextFieldAssist.TextFieldCornerRadius="0" Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="8,0" Padding="4,4" Text="{Binding CurentBackgroundHexColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                                               
+
 
                                             </Grid>
 
@@ -698,7 +752,7 @@
                                             </ItemsControl.ItemsPanel>
 
                                         </ListView>
-                                       
+
                                     </Grid>
 
                                 </StackPanel>
@@ -709,10 +763,10 @@
                                     </Grid.RowDefinitions>
                                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,8,0">
                                         <ComboBox ItemsSource="{Binding PreviewExampleOptions}" SelectedItem="{Binding SelectedPreviewExample}" SelectedIndex="0" Width="121" Margin="0,0,8,0" HorizontalAlignment="Right">
-                                            
+
                                         </ComboBox>
-                                       
-                                        
+
+
                                     </StackPanel>
                                     <Border Grid.Row="1" BorderBrush="#FFBFBFBF"  Background="#FFE2E2E2" Margin="8" BorderThickness="1">
                                         <Image Source="{Binding PreviewImageSource}" HorizontalAlignment="Center" VerticalAlignment="Center" />
